# plantclef-2025

./: .gitignore  README.md  pyproject.toml  requirements-SAM.txt  requirements-sam.txt  requirements.txt
genai/: DESIGN.md  pyproject.toml
genai/docs/: 2025-04-08-pipeline.md
genai/gbif/: fetch_gbif_species.py
notebooks/classification/: 20250330-mg-baseline-classification.ipynb  20250330-mg-naive-baseline.ipynb  20250409-mg-species-selection.ipynb  20250412-mg-submission-filtered-species.ipynb  20250416-mg-baseline-classification.ipynb  20250416-mg-single-image-classification.ipynb  20250419-mg-baseline-per-image.ipynb  20250419-mg-centroids.ipynb  20250503-mg-nms-classification.ipynb  20250504-mg-nms-submission.ipynb
notebooks/download-data/: 20250129-mg-download-data.ipynb  mg-20250129-download-data.ipynb
notebooks/eda/: 00-initial-exploration.ipynb  020125-ac-.ipynb  20250131-mg-validate-parquet-files.ipynb  20250208-mg-eda-species-imbalance.ipynb  20250210-mg-eda-species-imbalance.ipynb  20250213-ac-faiss.ipynb  (+12 more)
plantclef/: cli.py  config.py  create_top_species_subset.py  image_to_parquet.py  images_to_parquet.py  model_setup.py  plotting.py  serde.py  spark.py  test_to_parquet.py  transforms.py
scripts/: activate-mask-venv.sh  activate.sh  extract-data.sh  nvidia-logs.sh  slurm-alloc.py  sweep-logs.sh
tests/: conftest.py  test_embedding_transform.py  test_gpu_transform.py  test_gpu_workflow.py  test_mask_transform.py  test_mask_workflow.py  test_memory_usage.py  test_morph_workflow.py  test_retrieval_embed_transform.py  test_wrapped_finetuned_dinov2.py
(+140 files in other folders)
